# chess-gen

./: README.md  chess_gen.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
