[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chess-gen"
authors = [{name = "Stanislav Schmidt"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = ["chess", "rich"]

[project.urls]
Home = "https://github.com/Stannislav/chess-gen"
Documentation = "https://github.com/Stannislav/chess-gen"
Source = "https://github.com/Stannislav/chess-gen"

[project.scripts]
chessg = "chess_gen:main"

[project.optional-dependencies]
dev = ["flit", "ruff"]

[tool.ruff]
target-version = "py39"
lint.select = ["E4", "E7", "E9", "F"]
