[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chess-gen"
authors = [{name = "Stanislav Schmidt"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = ["chess", "rich"]

[project.urls]
Home = "https://github.com/Stannislav/chess-gen"
Documentation = "https://github.com/Stannislav/chess-gen"
Source = "https://github.com/Stannislav/chess-gen"

[project.scripts]
chessg = "chess_gen:main"

[project.optional-dependencies]
dev = ["flit", "mypy", "ruff"]

[tool.ruff]
target-version = "py39"
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "C90",    # mccabe, TODO: fix
    "COM812", # flake8-commas, missing-trailing-comma, conflicts with ruff format
    "D",      # pydocstyle, TODO: fix
    "PLR",    # Pylint - Refactor, TODO: fix
    "S311",   # flake8-bandit, suspicious-non-cryptographic-random-usage, false positive
]

[tool.mypy]
packages = "chess_gen"
strict = true
